objects/nDESIGN__Widget__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Icon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Is_Knockout__c</fullName>
        <description>This type of widget registers and runs a LifeCycle.App in a Screen Section.</description>
        <formula>IF(ISPICKVAL(nDESIGN__Type__c, &apos;Knockout&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Knockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Is_Narrative__c</fullName>
        <formula>IF(ISPICKVAL(nDESIGN__Type__c, &apos;Narrative&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Narrative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Parameters__c</fullName>
        <description>JSON parameters to configure vendor-specific widgets. {htmlGenerator: nCinoAwesomeHtmlKnockoutGenerator}</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Eight__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Five__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Four__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Nine__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Nine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_One__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Seven__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Seven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Six__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Six</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Ten__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Three__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Script_Resource_Two__c</fullName>
        <description>A static javascript resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A static javascript resource to load with the widget.</inlineHelpText>
        <label>Script Resource Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Eight__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Eight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Five__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Five</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Four__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Four</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Nine__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Nine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_One__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Seven__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Seven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Six__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Six</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Ten__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Three__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Stylesheet_Resource_Two__c</fullName>
        <description>A cascading style sheet (CSS) resource to load with the widget.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A cascading style sheet (CSS) resource to load with the widget.</inlineHelpText>
        <label>Stylesheet Resource Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Narrative</fullName>
                </value>
                <value>
                    <fullName>Knockout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nDESIGN__View__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Widget</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>